pulseaudio-policy-enforcement (0.5.21) unstable; urgency=low

  * media active/inactive notification in othermedia group

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 14 May 2009 16:00:00 +0300

pulseaudio-policy-enforcement (0.5.20) unstable; urgency=low

  * bumping version number for PA release

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 07 May 2009 16:38:00 +0300

pulseaudio-policy-enforcement (0.5.19) unstable; urgency=low

  [ Janos Kovacs ]
  * source-output-ext is now updated with the chnages that were made for
    sink-input-ext.c. This includes the source_route flag and the pre-routing
    (ie. overriding the traget source of source-output before it were actually
    created).
    the source-output to the act
  * removed the double "dbusif.c: dbusif.c:" from debug logs

  [ Ismo Puustinen ]
  * Don't send status signals if transaction ID is 0.

 -- Ismo Puustinen <ismo.h.puustinen@nokia.com>  Thu, 07 May 2009 13:42:21 +0300

pulseaudio-policy-enforcement (0.5.18) unstable; urgency=low

  * Bumped version for the latest pulseaudio co-release.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 23 Apr 2009 15:55:00 +0200

pulseaudio-policy-enforcement (0.5.17) unstable; urgency=low

  * Bumped version for the latest pulseaudio co-release.

 -- Krisztian Litkey <krisztian.litkey@nokia.com>  Mon, 20 Apr 2009 15:24:09 +0200

pulseaudio-policy-enforcement (0.5.16) unstable; urgency=low

  * directing streams to the right sink in pre-hook instead of post-hook.
    This eliminates a possible stream moving between sinks, eg. between
    sink.music and sink.voice.raw

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Mon, 06 Apr 2009 17:10:00 +0200

pulseaudio-policy-enforcement (0.5.15) unstable; urgency=low

  * changes for the new PA

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Tue, 02 Apr 2009 15:09:00 +0200

pulseaudio-policy-enforcement (0.5.14) unstable; urgency=low

  * introducing the 'set_sink' flag for initial, static routing (eg. for